# django-subdomains

./: Makefile  README.md  boot_django.py  makemigrations.py  pyproject.toml  run_tests.py  setup.py
.github/workflows/: django.yml
subdomains/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
subdomains/fixtures/: subdomains.json
subdomains/migrations/: 0001_initial.py
subdomains/tests/: test_middleware.py  test_views.py
