[tool.poetry]
name = "django-subdomains"
version = "0.0.1"
description = ""
authors = ["gabrielloliveira <gabrielloliveira097@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "subdomains"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
